--- a/index.html
+++ b/index.html
@@ -6,122 +6,212 @@
     <meta name="author" content="Артур Бричанский" />
     <!-- Додати короткий опис сторінки та ключові слова для шукачів типу google -->
     <title>WebStudio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+
+    <!-- Є ще ось такий варіант посилання. Який з них правильний ??? -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css" />
+
     <link rel="stylesheet" href="./css/main.css" />
 </head>
 
 <body class="page">
+
     <!-- Шапка сайта -->
-    <header>
-        <nav>
-            <a href="./index.html" class="logo"><span class="web-logo">Web</span>Studio</a
-        >
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link current">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
-            </ul>
-            <ul class="cont-nav list">
-                <li>
-                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+38 096 111 11 11" class="link">+38 096 111 11 11</a>
-                </li>
-            </ul>
+
+    <header class="header">
+        <nav class="container-1">
+            <div class="container-2">
+                <a class="header-logo" href="/index.html"><img src="/images/WebStudio.svg" alt="WebStudio" srcset="" /></a>
+                <ul class="site-nav list">
+                    <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="" class="link">Контакты</a></li>
+                </ul>
+            </div>
+
+            <div class="container-3">
+                <ul class="cont-nav list">
+                    <li class="item">
+                        <a class="header-logo-2" href="/index.html"><img src="/images/icon mail.svg" alt="значок почти" srcset="" /></a>
+                        <a href="mailto:info@devstudio.com" class="link-1">info@devstudio.com</a>
+                    </li>
+
+                    <li class="item">
+                        <a class="header-logo-3" href="/index.html"><img src="/images/icon phone.svg" alt="значок мобилы" srcset="" /></a>
+                        <a href="tel:+38 096 111 11 11" class="link-2">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
 
     <!-- Hero -->
+
     <main>
         <section class="hero">
-            <h1 class="title">Эффективные решения для вашего бизнеса</h1>
-            <a href="" class="btn primary">Заказать услугу</a>
+            <h1 class="hero-text">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="btn primary">Заказать услугу</button>
         </section>
+
         <!-- Основна частина -->
-        <!-- Особливості -->
+        <!-- Особливості feature-list -->
+
         <section class="section">
-            <h2 class="title">Особенности</h2>
-            <ul class="feature-list list">
-                <li class="">
-                    <h2 class="title">Внимание к деталям</h2>
-                    <p>
-                        Идейные соображения, а также начало повседневной работы по формированию позиции.
-                    </p>
-                </li>
-                <li>
-                    <h2 class="title">Пунктуальность</h2>
-                    <p>
-                        Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                    </p>
-                </li>
-                <li>
-                    <h2 class="title">Планирование</h2>
-                    <p>
-                        Равным образом консультация с широким активом в значительной степени обуславливает.
-                    </p>
-                </li>
-                <li>
-                    <h2 class="title">Современные технологии</h2>
-                    <p>
-                        Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                    </p>
-                </li>
-            </ul>
+            <div class="container-4">
+                <ul class="feature-list list">
+                    <li class="">
+                        <a class="image first group 1" href="/index.html"><img src="/images/image first group 1.svg" alt="image first group 1" srcset="" /></a>
+                        <h2 class="title-1">Внимание к деталям</h2>
+                        <p class="feature-text">
+                            Идейные соображения, а также начало повседневной работы по формированию позиции.
+                        </p>
+                    </li>
+                    <li>
+                        <a class="image first group 2" href="/index.html"><img src="/images/image first group 2.svg" alt="image first group 2" srcset="" /></a>
+                        <h2 class="title-2">Пунктуальность</h2>
+                        <p class="feature-text">
+                            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                        </p>
+                    </li>
+                    <li>
+                        <a class="image first group 3" href="/index.html"><img src="/images/image first group 3.svg" alt="image first group 3" srcset="" /></a>
+                        <h2 class="title-3">Планирование</h2>
+                        <p class="feature-text">
+                            Равным образом консультация с широким активом в значительной степени обуславливает.
+                        </p>
+                    </li>
+                    <li>
+                        <a class="image first group 4" href="/index.html"><img src="/images/image first group 4.svg" alt="image first group 4" srcset="" /></a>
+                        <h2 class="title-4">Современные технологии</h2>
+                        <p class="feature-text">
+                            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+
             <!-- Переваги -->
-            <h2 class="title">Чем мы занимаемся</h2>
-            <ul class="preference list">
-                <li>
+
+            <h2 class="preference title">Чем мы занимаемся</h2>
+            <ul class="preference-list list">
+                <li class="item">
                     <img src="./images/img1.jpg" width="370" alt="Програмирование" />
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images/img2.jpg" width="370" alt="Разработка мобильных приложений" />
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images/img3.jpg" width="370" alt="Веб дизайнинг" />
                 </li>
             </ul>
         </section>
-        <!-- команда -->
-        <section class="section">
-            <h2 class="title">Наша команда</h2>
+
+        <!-- команда command -->
+
+        <section class="command">
+            <h2 class="command-title title">Наша команда</h2>
             <ul class="list">
-                <li>
-                    <img src="./images_comand/img_comand1.jpg" width="270" alt="Игорь Демьяненко" />
-                    <h3 class="title">Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                <li class="item">
+                    <img src="./images/img_comand1.jpg" width="270" alt="Игорь Демьяненко" />
+                    <h3 class="team title">Игорь Демьяненко</h3>
+                    <p class="team-text">Product Designer</p>
+                    <a class="team-social" href="/index.html"></a><img src="/images/instagram.svg" alt="instagram" srcset="" /></a>
+                    <a class="team-social" href="/index.html"><img src="/images/twitter.svg" alt="twitter" srcset="" /></a>
+                    <a class="team-social" href="/index.html"><img src="/images/facebook.svg" alt="facebook" srcset="" /></a>
+                    <a class="team-social" href="/index.html"><img src="/images/IN.svg" alt="IN" srcset="" /></a>
                 </li>
-                <li>
-                    <img src="./images_comand/img_comand2.jpg" width="270" alt="Ольга Репина" />
-                    <h3 class="title">Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                <li class="item">
+                    <img src="./images/img_comand2.jpg" width="270" alt="Ольга Репина" />
+                    <h3 class="team title">Ольга Репина</h3>
+                    <p class="team-text">Frontend Developer</p>
+                    <a class="team-social" href="/index.html"><img src="/images/instagram.svg" alt="instagram" srcset="" /></a>
+                    <a class="team-social" href="/index.html"><img src="/images/twitter.svg" alt="twitter" srcset="" /></a>
+                    <a class="team-social" href="/index.html"><img src="/images/facebook.svg" alt="facebook" srcset="" /></a>
+                    <a class="team-social" href="/index.html"><img src="/images/IN.svg" alt="IN" srcset="" /></a>
                 </li>
-                <li>
-                    <img src="./images_comand/img_comand3.jpg" width="270" alt="Николай Тарасов" />
-                    <h3 class="title">Николай Тарасов</h3>
-                    <p>Marketing</p>
+                <li class="item">
+                    <img src="./images/img_comand3.jpg" width="270" alt="Николай Тарасов" />
+                    <h3 class="team title">Николай Тарасов</h3>
+                    <p class="team-text">Marketing</p>
+                    <a class="team-social" href="/index.html"><img src="/images/instagram.svg" alt="instagram" srcset="" /></a>
+                    <a class="team-social" href="/index.html"><img src="/images/twitter.svg" alt="twitter" srcset="" /></a>
+                    <a class="team-social" href="/index.html"><img src="/images/facebook.svg" alt="facebook" srcset="" /></a>
+                    <a class="team-social" href="/index.html"><img src="/images/IN.svg" alt="IN" srcset="" /></a>
                 </li>
-                <li>
-                    <img src="./images_comand/img_comand4.jpg" width="270" alt="Михаил Ермаков" />
-                    <h3 class="title">Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                <li class="item">
+                    <img src="./images/img_comand4.jpg" width="270" alt="Михаил Ермаков" />
+                    <h3 class="team title">Михаил Ермаков</h3>
+                    <p class="team-text">UI Designer</p>
+                    <a class="team-social" href="/index.html"><img src="/images/instagram.svg" alt="instagram" srcset="" /></a>
+                    <a class="team-social" href="/index.html"><img src="/images/twitter.svg" alt="twitter" srcset="" /></a>
+                    <a class="team-social" href="/index.html"><img src="/images/facebook.svg" alt="facebook" srcset="" /></a>
+                    <a class="team-social" href="/index.html"><img src="/images/IN.svg" alt="IN" srcset="" /></a>
                 </li>
             </ul>
         </section>
+
+        <! -- клиенты partners -->
+
+
+        <section class="partners">
+            <h2 class="partners-title title">Постоянные клиенты</h2>
+            <ul class="list">
+                <li class="item">
+                    <img src="./images/Client 1.svg" alt="Клинет №1" />
+                </li>
+
+                <li class="item">
+                    <img src="./images/Client 2.svg" alt="Клинет №2" />
+                </li>
+
+                <li class="item">
+                    <img src="./images/Client 3.svg" alt="Клинет №3" />
+                </li>
+
+                <li class="item">
+                    <img src="./images/Client 4.svg" alt="Клинет №4" />
+                </li>
+
+                <li class="item">
+                    <img src="./images/Client 5.svg" alt="Клинет №5" />
+                </li>
+
+                <li class="item">
+                    <img src="./images/Client 6.svg" alt="Клинет №6" />
+                </li>
     </main>
+
     <!-- Футер -->
+
     <footer>
-        <section>
-            <a href="./webstudio.html" class="foot-logo"><span class="web-foot-logo">Web</span>Studio</a
-        >
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <a href="mailto:info@example.com" class="footer link"
-          >info@example.com</a
-        >
-        <a href="tel:+38 099 111 11 11" class="footer link"
-          >+38 099 111 11 11</a
-        >
-      </section>
+        <section class="container-footer">
+            <div class="container-footer1">
+                <a class="footer-logo" href=""><img src="/images/WebStudio-white.svg" alt="" srcset="" /></a>
+                <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+                <li class="item">
+                    <a href="mailto:info@example.com" class="footer link">info@example.com</a>
+                </li>
+
+                <li class="item">
+                    <a href="tel:+38 099 111 11 11" class="footer link">+38 099 111 11 11</a>
+                </li>
+            </div>
+
+            <div class="container-footer2">
+                <li class="social">
+                    <p class="social-text">ПРИСОЕДИНЯЙТЕСЬ</p>
+                    <a class="footer-social" href="/index.html"></a><img src="/images/instagram.svg" alt="instagram" srcset="" /></a>
+                    <a class="footer-social" href="/index.html"><img src="/images/twitter.svg" alt="twitter" srcset="" /></a>
+                    <a class="footer-social" href="/index.html"><img src="/images/facebook.svg" alt="facebook" srcset="" /></a>
+                    <a class="footer-social" href="/index.html"><img src="/images/IN.svg" alt="IN" srcset="" /></a>
+                </li>
+            </div>
+        </section>
     </footer>
-  </body>
+</body>
+
 </html>
