--- a/portfolio.html
+++ b/portfolio.html
@@ -11,117 +11,137 @@
 
 <body class="page">
     <!-- Шапка сайта -->
-    <header>
-        <nav>
-            <a href="./index.html" class="logo"><span class="web-logo">Web</span>Studio</a
-        >
-        <ul class="site-nav list">
-          <li><a href="/" class="link">Студия</a></li>
-            <li><a href="" class="link current">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
-            </ul>
-            <ul class="cont-nav list">
-                <li>
-                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+38 096 111 11 11" class="link">+38 096 111 11 11</a>
-                </li>
-            </ul>
+
+    <header class="header">
+        <nav class="container-1">
+            <div class="container-2">
+                <a class="header-logo" href="/index.html"><img src="/images/WebStudio.svg" alt="WebStudio" srcset="" /></a>
+                <ul class="site-nav list">
+                    <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="" class="link">Контакты</a></li>
+                </ul>
+            </div>
+
+            <div class="container-3">
+                <ul class="cont-nav list">
+                    <li class="item">
+                        <a class="header-logo-2" href="/index.html"><img src="/images/icon mail.svg" alt="значок почти" srcset="" /></a>
+                        <a href="mailto:info@devstudio.com" class="link-1">info@devstudio.com</a>
+                    </li>
+
+                    <li class="item">
+                        <a class="header-logo-3" href="/index.html"><img src="/images/icon phone.svg" alt="значок мобилы" srcset="" /></a>
+                        <a href="tel:+38 096 111 11 11" class="link-2">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
+
     <!-- Чим ми займаємось -->
-    <section>
+
+    <section class="container 5">
         <ul class="port-but list">
-            <li><button type="button" class="link">Все</button></li>
-            <li><button type="button" class="link">Веб-сайты</button></li>
-            <li><button type="button" class="link">Приложения</button></li>
-            <li><button type="button" class="link">Дизайн</button></li>
-            <li><button type="button" class="link">Маркетинг</button></li>
+            <li><button type="button" class="link-6">Все</button></li>
+            <li><button type="button" class="link-6">Веб-сайты</button></li>
+            <li><button type="button" class="link-6">Приложения</button></li>
+            <li><button type="button" class="link-6">Дизайн</button></li>
+            <li><button type="button" class="link-6">Маркетинг</button></li>
         </ul>
     </section>
 
     <!--Наші роботи  -->
-    <ul class="port-work list">
-        <li>
-            <a href="" class="link">
-                <img src="./images_portfolio/work/img.jpg" width="370" alt="Технокряк" />
-                <h2>Технокряк</h2>
-                <p class="link">Веб-сайт</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images_portfolio/work/img1.jpg" width="370" alt="Постер New Orlean vs Golden Star" />
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p class="link">Дизайн</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images_portfolio/work/img2.jpg" width="370" alt="Ресторан Seafood" />
-                <h2>Ресторан Seafood</h2>
-                <p class="link">Приложение</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images_portfolio/work/img3.jpg" width="370" alt="Проект Prime" />
-                <h2>Проект Prime</h2>
-                <p class="link">Маркетинг</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images_portfolio/work/img4.jpg" width="370" alt="Проект Boxes" />
-                <h2>Проект Boxes</h2>
-                <p class="link">Приложение</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images_portfolio/work/img5.jpg" width="370" alt="Inspiration has no Borders" />
-                <h2>Inspiration has no Borders</h2>
-                <p class="link">Веб-сайт</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images_portfolio/work/img6.jpg" width="370" alt="Издание Limited Edition" />
-                <h2>Издание Limited Edition</h2>
-                <p class="link">Дизайн</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images_portfolio/work/img7.jpg" width="370" alt="Проект LAB" />
-                <h2>Проект LAB</h2>
-                <p class="link">Маркетинг</p>
-            </a>
-        </li>
-        <li>
-            <a href="" class="link">
-                <img src="./images_portfolio/work/img8.jpg" width="370" alt="Growing Business" />
-                <h2>Growing Business</h2>
-                <p class="link">Приложение</p>
-            </a>
-        </li>
-    </ul>
+
+    <section class="container-6">
+        <ul class="port-work list-2">
+            <div class="container-work">
+                <li>
+                    <a href=" " class="link-7">
+                        <img src="./images/img_port-1.jpg " width="370 " alt="Технокряк " />
+                    </a>
+                    <h1 class="title ">Технокряк</h1>
+                    <p class="text ">Веб-сайт</p>
+                </li>
+            </div>
+            <li>
+                <a href=" " class="link-7">
+                    <img src="./images/img_port-2.jpg " width="370 " alt="Постер New Orlean vs Golden Star " /></a>
+                <h1 class="title ">Постер New Orlean vs Golden Star</h1>
+                <p class="text ">Дизайн</p>
+            </li>
+            <li>
+                <a href=" " class="link-7">
+                    <img src="./images/img_port-3.jpg " width="370 " alt="Ресторан Seafood " /></a>
+                <h1 class="title ">Ресторан Seafood</h1>
+                <p class="text ">Приложение</p>
+            </li>
+            <li>
+                <a href=" " class="link-7">
+                    <img src="./images/img_port-4.jpg " width="370 " alt="Проект Prime " /></a>
+                <h1 class="title ">Проект Prime</h1>
+                <p class="text ">Маркетинг</p>
+            </li>
+            <li>
+                <a href=" " class="link-7">
+                    <img src="./images/img_port-5.jpg " width="370 " alt="Проект Boxes " /></a>
+                <h1 class="title ">Проект Boxes</h1>
+                <p class="text ">Приложение</p>
+            </li>
+            <li>
+                <a href=" " class="link-7">
+                    <img src="./images/img_port-6.jpg " width="370 " alt="Inspiration has no Borders " /></a>
+                <h1 class="title ">Inspiration has no Borders</h1>
+                <p class="text ">Веб-сайт</p>
+            </li>
+            <li>
+                <a href=" " class="link-7">
+                    <img src="./images/img_port-7.jpg " width="370 " alt="Издание Limited Edition " /></a>
+                <h1 class="title ">Издание Limited Edition</h1>
+                <p class="text ">Дизайн</p>
+            </li>
+            <li>
+                <a href=" " class="link-7">
+                    <img src="./images/img_port-8.jpg " width="370 " alt="Проект LAB " /></a>
+                <h1 class="title ">Проект LAB</h1>
+                <p class="text ">Маркетинг</p>
+            </li>
+            <li>
+                <a href=" " class="link-7">
+                    <img src="./images/img_port-9.jpg " width="370 " alt="Growing Business " /></a>
+                <h1 class="title ">Growing Business</h1>
+                <p class="text ">Приложение</p>
+            </li>
+        </ul>
+    </section>
 
     <!-- Футер -->
+
     <footer>
-        <section>
-            <a href="./webstudio.html" class="foot-logo"><span class="web-foot-logo">Web</span>Studio</a
-        >
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <a href="mailto:info@example.com" class="footer link"
-          >info@example.com</a
-        >
-        <a href="tel:+38 099 111 11 11" class="footer link"
-          >+38 099 111 11 11</a
-        >
-      </section>
+        <section class="container-footer ">
+            <div class="container-footer1 ">
+                <a class="footer-logo " href=" "><img src="/images/WebStudio-white.svg " alt=" " srcset=" " /></a>
+                <address class="address ">г. Киев, пр-т Леси Украинки, 26</address>
+                <li class="item ">
+                    <a href="mailto:info@example.com " class="footer link ">info@example.com</a>
+                </li>
+
+                <li class="item ">
+                    <a href="tel:+38 099 111 11 11 " class="footer link ">+38 099 111 11 11</a>
+                </li>
+            </div>
+
+            <div class="container-footer2 ">
+                <li class="social ">
+                    <p class="social-text ">ПРИСОЕДИНЯЙТЕСЬ</p>
+                    <a class="footer-social " href="/index.html "></a><img src="/images/instagram.svg " alt="instagram " srcset=" " /></a>
+                    <a class="footer-social " href="/index.html "><img src="/images/twitter.svg " alt="twitter " srcset=" " /></a>
+                    <a class="footer-social " href="/index.html "><img src="/images/facebook.svg " alt="facebook " srcset=" " /></a>
+                    <a class="footer-social " href="/index.html "><img src="/images/IN.svg " alt="IN " srcset=" " /></a>
+                </li>
+            </div>
+        </section>
     </footer>
-  </body>
+</body>
+
 </html>
